# nox

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  config.example.toml  config.toml  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  slow-tests.yml
abi/: DarkPool.json  MockERC20.json  NoxRegistry.json  NoxRewardPool.json  RelayerMulticall.json
benches/: exit_bench.rs  pipeline_bench.rs  replay_bench.rs
crates/darkpool-client/: Cargo.toml
crates/darkpool-client/src/: builder.rs  config.rs  crypto_helpers.rs  economics.rs  identity.rs  key_repository.rs  lib.rs  merkle_tree.rs  note_factory.rs  note_processor.rs  persistence.rs  privacy_client.rs  proof_inputs.rs  prover.rs  scan_engine.rs  utxo_store.rs
crates/darkpool-client/tests/: client_prover_test.rs  client_vault_test.rs
crates/darkpool-crypto/: Cargo.toml
crates/darkpool-crypto/benches/: crypto_bench.rs
crates/darkpool-crypto/src/: aes.rs  bjj.rs  dleq.rs  ecdh.rs  error.rs  field.rs  kdf.rs  lib.rs  poseidon.rs
crates/darkpool-crypto/tests/: crypto_realism.rs  poseidon_parity.rs
crates/nox-client/: Cargo.toml
crates/nox-client/src/: cover_traffic.rs  http_transport.rs  lib.rs  mixnet_client.rs  surb_budget.rs  topology_node.rs  topology_sync.rs
crates/nox-core/: Cargo.toml
crates/nox-core/benches/: protocol_bench.rs
crates/nox-core/src/: events.rs  lib.rs  utils.rs
crates/nox-core/src/models/: chain.rs  handshake.rs  mod.rs  note.rs  payloads.rs  topology.rs
crates/nox-core/src/protocol/: fec.rs  fragmentation.rs  kdf.rs  mod.rs  serialization.rs
crates/nox-core/src/traits/: interfaces.rs  mod.rs  service.rs  transport.rs
crates/nox-core/tests/: fragmentation_chaos.rs  fragmentation_regression.rs
crates/nox-crypto/: Cargo.toml
crates/nox-crypto/benches/: crypto_bench.rs  pow_bench.rs  sphinx_bench.rs  surb_bench.rs
crates/nox-crypto/src/: lib.rs
crates/nox-crypto/src/sphinx/: lioness.rs  mod.rs  packet.rs  pow.rs  surb.rs
crates/nox-crypto/tests/: crypto_properties.rs  hybrid_sphinx_properties.rs
crates/nox-node/: Cargo.toml
crates/nox-node/src/: config.rs  lib.rs  node.rs
crates/nox-node/src/blockchain/: executor.rs  mod.rs  observer.rs  tx_manager.rs
crates/nox-node/src/infra/: event_bus.rs  mod.rs  storage.rs
crates/nox-node/src/infra/persistence/: mod.rs  peer_registry.rs  rotational_bloom.rs
crates/nox-node/src/ingress/: http_server.rs  mod.rs  response_buffer.rs  response_router.rs
crates/nox-node/src/network/: behaviour.rs  connection_filter.rs  mod.rs  rate_limiter.rs  service.rs
crates/nox-node/src/price/: client.rs
crates/nox-node/src/services/: exit.rs  mixing.rs  mod.rs  network_manager.rs  profitability.rs  response_packer.rs  token_registry.rs  traffic_shaping.rs
crates/nox-node/src/services/handlers/: echo.rs  ethereum.rs  http.rs  mod.rs  rpc.rs  traffic.rs
crates/nox-node/src/services/relayer/: egress.rs  ingest.rs  mix_loop.rs  mod.rs  worker.rs
crates/nox-node/src/services/security/: mod.rs
crates/nox-node/src/telemetry/: adapter.rs  cluster.rs  metrics.rs  mod.rs  process.rs  sse.rs  version.rs
crates/nox-oracle/: Cargo.toml
crates/nox-oracle/src/: error.rs  fetcher.rs  lib.rs  server.rs  types.rs
crates/nox-oracle/src/providers/: aggregate.rs  binance.rs  coingecko.rs  cryptocompare.rs  kraken.rs  mod.rs
crates/nox-prover/: Cargo.toml
crates/nox-prover/src/: lib.rs  mock_prover.rs  native_prover.rs  noir_prover.rs  prover_worker.rs
crates/nox-sim/: Cargo.toml
crates/nox-sim/src/: bench_common.rs  lib.rs  process_mesh.rs
crates/nox-test-infra/: Cargo.toml
crates/nox-test-infra/src/: lib.rs
crates/nox-test-infra/src/contracts/: bindings.rs  deployer.rs  mod.rs
deploy/: docker-compose.yml  nodes.env.example
deploy/configs/: nox-1.toml  nox-10.toml  nox-2.toml  nox-3.toml  nox-4.toml  nox-5.toml  nox-6.toml  nox-7.toml  nox-8.toml  nox-9.toml
deploy/scripts/: deploy.sh
docs/: architecture.md  configuration.md  integration-tests.md  quick-setup.md
docs/examples/: dev.toml  exit.toml  full.toml  relay.toml
scripts/: bootstrap-artifacts.sh  local-mesh.sh  pgo_build.sh
scripts/bench/: gen_charts.py  run_all.sh  run_multiprocess.sh
scripts/prover/: package-lock.json  package.json  prove_cli.mjs  prove_worker.mjs
src/: lib.rs  main.rs
tests/: anvil_trace_debug.rs  chain_executor.rs  client_features.rs  crypto_realism.rs  economics_e2e.rs  egress_stage.rs  ethereum_handler.rs  exit_e2e.rs  exit_service.rs  exit_service_eth.rs  fec_e2e.rs  fragmentation_e2e.rs  gossip_handshake.rs  http_e2e.rs  kdf_parity.rs  large_payload.rs  master_e2e.rs  mesh_integration.rs  mix_stage.rs  mixing_distribution.rs  native_prover_parity.rs  network_chaos.rs  network_dos.rs  node_lifecycle.rs  p2p_connectivity.rs  persistence_integration.rs  pipeline_robustness.rs  relayer_pipeline.rs  reply_path.rs  scan_engine_integration.rs  topology_cover.rs  topology_manager.rs  ts_parity_vectors.rs  web_proxy.rs
