[package]
name = "nox-core"
version = "0.1.0"
edition = "2021"
authors = ["Hisoka IO"]
description = "Shared protocol types for the NOX mixnet (events, traits, models, fragmentation)"
license = "Apache-2.0"
repository = "https://github.com/hisoka-io/nox"

[dependencies]
darkpool-crypto = { path = "../darkpool-crypto" }
nox-crypto = { path = "../nox-crypto" }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bitflags = { version = "2.4", features = ["serde"] }
bincode = "1.3"
reed-solomon-erasure = "6.0"
ethers-core = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
criterion = "0.5"

[lints]
workspace = true

[[bench]]
name = "protocol_bench"
harness = false
