[package]
name = "nox-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Hisoka IO"]
description = "Mixnet cryptography: Sphinx packets, SURBs, PoW, X25519 ECDH"
license = "Apache-2.0"
repository = "https://github.com/hisoka-io/nox"

[features]
default = ["rayon-pow"]
hop-metrics = []
rayon-pow = ["dep:rayon"]

[dependencies]
chacha20 = "0.9"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = { workspace = true }
subtle = "2.6"
blake3 = "1.5"
rayon = { version = "1.10", optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde-big-array = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = { workspace = true }
hex = "0.4"
x25519-dalek = { version = "2.0.0", features = ["static_secrets", "serde"] }
curve25519-dalek = { version = "4.1", features = ["rand_core"] }

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.5"
serde_json = "1"

[lints]
workspace = true

[[bench]]
name = "sphinx_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "pow_bench"
harness = false

[[bench]]
name = "surb_bench"
harness = false
