[package]
name = "nox-oracle"
version = "0.1.0"
edition = "2021"
authors = ["Hisoka IO"]
description = "Standalone price oracle server for NOX node profitability calculations"
license = "Apache-2.0"
repository = "https://github.com/hisoka-io/nox"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[lints]
workspace = true
