[package]
name = "nox-test-infra"
version = "0.1.0"
edition = "2021"
authors = ["Hisoka IO"]
description = "Test infrastructure for NOX: contract deployment, virtual nodes, test harness, simulation"
license = "Apache-2.0"
repository = "https://github.com/hisoka-io/nox"

[dependencies]
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
hex = { workspace = true }

[lints]
workspace = true
